--- a/flask-app/templates/main.html
+++ b/flask-app/templates/main.html
@@ -1,56 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    	<meta charset="utf-8">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>My Web App</title>
+    <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+
+	<!-- Whole Page CSS -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='/css/style.css') }}"
+	/>
+	<!-- Image CSS -->
+	<link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static',filename='/css/image.css') }}"
+    />
+
+    <title>ASL-Translator</title>
   </head>
-  <body>
-  	<h1> Hello World </h1>
-	<!-- <form action="{{ url_for('main') }}" method="POST">
-	    <fieldset>
-	        <legend>Input Text:</legend>
-	        Type your text in here:
-	        <input name="user_input_text" type="text" required>
-	        <input type="submit" value="Submit">
-	    </fieldset>
-	</form>
-	<div class="alert alert-success">
-		{% if input_text %}
-			<h4> Classification for: {{ input_text }} </h4>
-	    {% endif %}
 
-		{% if result %}
-			<p> Model predicted: {{ result }} </p>
-	    {% endif %}
+  <body class="text-center">
+    <div class="cover-container d-flex h-100  p-3 mx-auto flex-column">
+      <header class="masthead mb-6">
+        <div class="inner">
+          <h3 class="masthead-brand">
+            <a class="navbar-brand" href="{{ url_for('main') }}"
+              >ASL-Translator</a
+            >
+          </h3>
+          <nav class="nav nav-masthead justify-content-center">
+            <a class="nav-link active" href="{{ url_for('main') }}">Home</a>
+            <a class="nav-link" href="{{ url_for('about') }}"
+              >About ASL-T<span class="sr-only">(current)</span></a
+            >
+            <a class="nav-link" href="{{ url_for('contributors') }}"
+              >Contributors</a
+            >
+          </nav>
+        </div>
+      </header>
 
-	    {% if precent_democrat %}
-	    	<p> Percent democrat: {{ precent_democrat }} </p>
-	    {% endif %}
+      <main role="main" class="inner cover">
+		<h1 class="cover-heading">ASL Image Classifier</h1>
 
-	    {% if precent_republican %}
-	    	<p> Percent republican: {{ precent_republican }} </p>
-	    {% endif %}
-	</div> -->
-     <p>
-		<a href="{{ url_for('classify_image') }} " class="btn btn-secondary my-4">Classify Image Page</a>
-		<a href="{{ url_for('images') }} " class="btn btn-secondary my-4">More Images Page</a>
-		<a href="{{ url_for('bootstrap') }} " class="btn btn-secondary my-4">Pretty Boostrap Page</a>
+		<div class="jumbotron bg-secondary mb-2">
+			<h2>Upload Image Here </h2>
+			<form method=post enctype=multipart/form-data class="mb-2">
+				<input type=file name=file autocomplete="off" required>
+				<input type=submit class="btn btn-secondary" value=Upload>
+			</form>
+			{% if prediction and filename %}
+				<div class="text-center mb-2">
+					<img class="rounded" src="{{ url_for('static', filename='uploads/' + filename) }}">
+				  </div>
+				<p class="text-center"> Prediction for input image is: {{ prediction }} </p>
+			{% endif %}
+		</div>
 
-	 </p>
-	 
-	<div>
-		<h1> Image Classifier </h1>
-		<h2>Upload Image Here </h2>
-		<form method=post enctype=multipart/form-data>
-		<input type=file name=file>
-		<input type=submit value=Upload>
-		</form>
-		{% if prediction %}
-		<p> Prediction for input image is: {{ prediction }} </p>
-		{% endif %}
+		<!-- Default checked -->
+		<div class="custom-control custom-switch mb-4 pr-4">
+			<div class="justify-content-center mb-2">
+				<input type="checkbox" name="cheat_sheet" class="custom-control-input" id="asl_cheat_button" value="on" checked>
+				<label class="custom-control-label" for="asl_cheat_button">ASL Cheat Sheet</label>
+			</div>
+			
+			<div class="justify-content-center visible">
+				<div>
+					<img id="asl_cheat_sheet" src="../static/imgs/asl_cheat_sheet.jpg">
+				</div>
+			</div>
+		</div>
+
+		
+
+      </main>
+
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>
+            Cover template for
+            <a href="https://getbootstrap.com/">Bootstrap</a>, by
+            <a href="https://twitter.com/mdo">@mdo</a>.
+          </p>
+        </div>
+      </footer>
 	</div>
 	
+	<!-- Include jquery  -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<!-- Include js -->
+	<script src="{{url_for('static', filename='scripts/toggleCheatSheet.js')}}"></script>
+	<!-- <script src="../static/js/toggleCheatSheet.js"></script> -->
+
 
   </body>
 </html>
