Added gray background style

--- a/flask-app/templates/contributors.html
+++ b/flask-app/templates/contributors.html
@@ -57,7 +57,7 @@
           </div>
         </section>
         
-        <div class="album py-5 bg-light align-items-center w-100">
+        <div class="album py-5 silver-bg align-items-center w-100">
             <table class="w-100">
                 <tr>
                     <td>
