--- a/flask-app/templates/contributors.html
+++ b/flask-app/templates/contributors.html
@@ -71,7 +71,7 @@
                                     />
                                     <div class="card-body">
                                         <p class="card-text">
-                                            Xuejin Gao<br />
+                                            <b>Xuejin Gao</b><br />
                                             Studying CS @ Hunter College with interest in ML and AI.
                                         </p>
                                         <div class="d-flex justify-content-between align-items-center">
@@ -109,13 +109,12 @@
                                 <img
                                   class="card-img-top avatar mt-3"
                                   alt="Thumbnail [100%x225]"
-                                  src="{{url_for('static', filename='contributors/xuejin.jpg')}}"
+                                  src="{{url_for('static', filename='contributors/#.jpg')}}"
                                   />
                                 <div class="card-body">
                                   <p class="card-text">
-                                    Xuejin Gao<br />
-                                    Studying CS @ Hunter College. Connect on
-                                    linkedin? :)
+                                     <b>Michelle Lucero</b><br />
+                                    
                                   </p>
                                   <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
