Added Contributor image, made edits to the styles throughout all the pages

--- a/flask-app/templates/about.html
+++ b/flask-app/templates/about.html
@@ -20,8 +20,8 @@
   </head>
 
   <body class="text-center">
-    <div class="cover-container d-flex h-100 w-80 p-3 mx-auto flex-column">
-      <header class="masthead mb-auto">
+    <div class="cover-container d-flex h-100  p-3 mx-auto flex-column">
+      <header class="masthead mb-6">
         <div class="inner">
           <h3 class="masthead-brand">
             <a class="navbar-brand" href="{{ url_for('main') }}">ASL-Translator</a>
@@ -38,18 +38,9 @@
 
       <main role="main" class="inner cover">
         <div class="jumbotron bg-secondary">
-          <h1>About ASL-T</h1>
+          <h1 class="text-center">Our Goal</h1>
           <div class="text-left">
-            <h3><u>Our Goal</u></h3>
-            <p class="indent">
-              <b>ASL-Translator</b> is a data science project that helps translate
-              American Sign Language letter into their corresponding alphabetic letter.
-              The idea of this project is to make it easier to communicate while providing
-              a helpful resource for those who want to learn some ASL.
-            </p>
-
-            <h3>Our Goal</h3>
-            <p class="indent">
+            <p>
               <b>ASL-Translator</b> is a data science project that helps translate
               American Sign Language letter into their corresponding alphabetic letter.
               The idea of this project is to make it easier to communicate while providing
@@ -61,7 +52,7 @@
           </div>
 
           <a
-            class="btn btn-lg btn-primary"
+            class="btn  btn-secondary"
             href="https://github.com/CTP-Team-MLXG/ASL-T"
             role="button"
             target="_blank"
