--- a/flask-app/static/css/style.css
+++ b/flask-app/static/css/style.css
@@ -29,8 +29,10 @@ a:hover {
 
 html,
 body {
-  height: 100%;
-  background-color: #333;
+  background-color: #D9AFD9;
+  background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
 body {
@@ -41,13 +43,13 @@ body {
   -webkit-box-pack: center;
   justify-content: center;
   color: #fff;
-  text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+  /* text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5); */
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.5);
 }
 
 .cover-container {
   /* max-width: 42em; */
-  width: 50%;
+  /* width: 50%; */
 }
 
 /*
@@ -115,4 +117,29 @@ body {
  */
 .indent {
   text-indent: 50px;
+}
+
+.text-left {
+  max-width: 800px;
+}
+
+.bg-secondary {
+  background-color: rgba(255, 255, 255, 0.4) !important;
+  border-radius:16px;
+  color: #000;
+}
+
+.bg-secondar p,
+.bg-secondar h1.text-center {
+  font-weight: 100 !important;
+}
+
+.album.py-5.silver-bg.align-items-center.w-100 {
+  background-color: rgba(255, 255, 255, 0.4) !important;
+  border-radius:16px;
+  color: #000;
+}
+
+.card.mb-4.box-shadow.h-100.bg-secondary.align-items-center.w-80 {
+  max-width: 424px;
 }
