--- a/flask-app/templates/contributors.html
+++ b/flask-app/templates/contributors.html
@@ -109,11 +109,12 @@
                                 <img
                                   class="card-img-top avatar mt-3"
                                   alt="Thumbnail [100%x225]"
-                                  src="{{url_for('static', filename='contributors/#.jpg')}}"
+                                  src="{{url_for('static', filename='contributors/michelle.jpg')}}"
                                   />
                                 <div class="card-body">
                                   <p class="card-text">
                                      <b>Michelle Lucero</b><br />
+                                     Studying CS @ Hunter College with interest in ML and WebDev
                                     
                                   </p>
                                   <div class="d-flex justify-content-between align-items-center">
@@ -121,7 +122,7 @@
                                       <button
                                         type="button"
                                         class="btn btn-sm btn-outline-secondary">
-                                        <a target="_blank" href="https://github.com/xuejingao"
+                                        <a target="_blank" href="https://github.com/MichelleLucero"
                                           >Github</a>
                                       </button>
                                       <button
@@ -130,7 +131,7 @@
                                       >
                                         <a
                                           target="_blank"
-                                          href="https://linkedin.com/in/xuejingao"
+                                          href="https://linkedin.com/in/michelle-lucero"
                                           >Linkedin</a
                                         >
                                       </button>
